...
        android:contentDescription="@string/str_edit_profile"
        android:icon="@drawable/ic_baseline_edit_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_logout"
        android:title="@string/str_logout"
        app:showAsAction="never" />
</menu>
